# serial-keel

./: .gitignore  Cargo.toml  README-svg.md  README.md  build-musl.sh  check_and_upgrade_serial_keel.sh  pyproject.toml  serial-keel-rs.txt  serial-keel.template.service  test-until-fail.sh
.github/workflows/: basics.yml  rust.yml
core/: Cargo.toml  docker-jaeger.sh  docker-zipkin.sh
core/src/: actions.rs  cli.rs  client.rs  config.rs  control_center.rs  endpoint.rs  error.rs  events.rs  lib.rs  logging.rs  main.rs  mock.rs  peer.rs  serial.rs  server.rs  test-newlines.txt  user.rs  websocket.rs
core/src/endpoint/: mock.rs  serial.rs
core/src/serial/: codecs.rs  error.rs  serial_port.rs
core/src/serial/codecs/: lines.rs
core/tests/: basic.rs  client.rs  events.rs  grouping.rs  labels.rs  queuing.rs  regression.rs  user_events.rs  writes.rs
core/tests/common/: mod.rs
core/tests/regression_tests/: mod.rs
core/tests/regression_tests/several_mocks_want_same_group_write_big_message/: mock.ron  mod.rs
frontend/iced/: Cargo.toml
frontend/iced/src/: landing_page.rs  main.rs  pane.rs  reusable.rs  scrollable.rs  servers.rs  settings.rs  subscriptions.rs  user_events.rs
frontend/iced/src/pane/: mod.rs
frontend/iced/src/pane/views/: mod.rs  user_events.rs  users.rs
frontend/tui/: Cargo.toml
frontend/tui/src/: main.rs
js/: example-client.js
py/: LICENSE.txt  README.md  common.py  make_tfm_spec.py  pyproject.toml  requirements.txt  serial_keel.py  serial_keel_util.py  setup.cfg  test-concurrent.ron  test-output-mock.txt  test_basic.py  test_crypto.py  test_crypto_concurrent.py  test_sk.py  test_tfm.py  test_ws.py  tfm-spec.json  ws.py  zephyr.hex
py/examples/: test_mock_concurrent.py  test_mock_concurrent.ron
py/mock/: tfm-regression-non-secure.txt  tfm-regression-secure.txt
py/sample/: sample_output.txt  test_crypto_concurrent.py
py/serialkeel/: __init__.py  serial_keel.py
py/serialkeel/mock_sample/: test_crypto_concurrent.py
py/serialkeel/util/: __init__.py
scripts/systemd/: check_and_upgrade_serial_keel.sh  install_serial_keel.sh  serial-keel.template.service
src/: actions.rs  cli.rs  client.rs  config.rs  control_center.rs  endpoint.rs  error.rs  lib.rs  logging.rs  main.rs  mock.rs  peer.rs  serial.rs  server.rs  user.rs  websocket.rs
src/endpoint/: mock.rs  serial.rs
src/serial/: error.rs  serial_port.rs
src/serial/codecs/: lines.rs
tests/: basic.rs  client.rs  grouping.rs  labels.rs  mock_session.rs  queuing.rs  writes.rs
tests/common/: mod.rs
tui/: Cargo.toml
tui/src/: main.rs
