[package]
name = "serial-keel"
version = "0.1.0"
edition = "2021"

[dependencies]
nordic-types = { git = "https://github.com/torsteingrindvik/nordic-types" }

axum = { version = "0.5", features = ["ws", "headers"] }
futures = "0.3.24"
headers = "0.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = { version = "0.10.0", optional = true }
async-recursion = "1.0.0"

[dev-dependencies]
tokio-tungstenite = "0.17.2"
tungstenite = "0.17"
color-eyre = "*"
pretty_assertions = "1.3.0"
lipsum = "0.8.2"

[features]
tracy = ["tracing-tracy"]

[profile.release]
lto = true
debug = 1
