[package]
name = "serial-keel"
version = "0.1.0"
edition = "2021"

[dependencies]
nordic-types = { git = "https://github.com/torsteingrindvik/nordic-types" }

axum = { version = "0.5", features = ["ws", "headers"] }
futures = "0.3.24"
headers = "0.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-recursion = "1.0.0"
tower-http = { version = "0.3", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = { version = "0.10.0", optional = true }
opentelemetry-jaeger = { version = "0.17", features = [
    "rt-tokio",
], optional = true }
opentelemetry = { version = "0.18", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = "0.18"
opentelemetry_api = "0.18.0"

opentelemetry-zipkin = { version = "0.16", features = [
    "reqwest-client",
], default-features = false, optional = true }

[dev-dependencies]
tokio-tungstenite = "0.17.2"
tungstenite = "0.17"
color-eyre = "*"
pretty_assertions = "1.3.0"
lipsum = "0.8.2"

[features]
use-tracy = ["tracing-tracy"]
use-jaeger = ["opentelemetry", "opentelemetry-jaeger"]
use-zipkin = ["opentelemetry", "opentelemetry-zipkin"]

# By default, mock endpoints with the same name
# are not shared.
#
# If one connection controls a mock called "my-mock",
# and another connection does this as well,
# they will not interfere with each other.
#
# If this is enabled, they will be shared.
# This can be done in order to test queuing
# and exclusivity.
mocks-share-endpoints = []

[profile.release]
lto = true
debug = 1
