[metadata]
name = serialkeel
version = 0.1.0
author = Torstein Grindvik
author_email = torsteingrindvik@nordicsemi.no
description = Serial Keel client for Python
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/torsteingrindvik/serial-keel
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
	websockets
	pytest-asyncio-cooperative

