[package]
name = "frontend-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
serial-keel = { path = "../../core" }

iced = { version = "0.7", features = ["image", "tokio", "debug"] }
iced_lazy = "0.4"

# iced_aw = { git = "https://github.com/iced-rs/iced_aw", rev = "120087c0bbeee4e0059652d09c879452e82d7397" }
# iced_aw = { path = "D:/repos/iced_aw", features = ["icons"] }
lipsum = "0.8.2"
iced_aw = { git = "https://github.com/iced-rs/iced_aw", features = [
	"icons",
], rev = "120087c0bbeee4e0059652d09c879452e82d7397" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.25.0", features = ["time"] }
# iced_aw = { path = "D:/repos/iced_aw", features = ["icons"] }
# iced_aw = { path = "/home/torstein/repos/iced_aw" }
